# teamTech22-23

./: index.css
ReadData/: CMakeLists.txt  Satellite.cpp  Satellite.h  Scheduler.h  main.cpp  schedule.cpp
front-end-app/: package-lock.json  package.json
front-end-app/server/: .env  SatelliteData.js  package.json
front-end-app/server/models/: Satellite.js
front-end-app/src/: App.js  Calendar.js  Event.js  SatelliteData.js  index.css
gitHubWorkshop/: gitHubWorkshop.sln
gitHubWorkshop/gitHubWorkshop/: activity.cpp  activity_inc.cpp  activity_inc.h  gitHubWorkshop.cpp  gitHubWorkshop.vcxproj  gitHubWorkshop.vcxproj.filters
